--- a/execution/executor-service/Cargo.toml
+++ b/execution/executor-service/Cargo.toml
@@ -29,6 +29,7 @@ aptos-vm = { workspace = true, features = ["testing"] }
 bcs = { workspace = true }
 clap = { workspace = true }
 crossbeam-channel = { workspace = true }
+dashmap = { workspace = true }
 itertools = { workspace = true }
 num_cpus = { workspace = true }
 rand = { workspace = true }
