--- a/docker/compose/indexer-grpc/data-service-config.yaml
+++ b/docker/compose/indexer-grpc/data-service-config.yaml
@@ -3,6 +3,10 @@ health_check_port: 8084
 server_config:
   data_service_grpc_non_tls_config:
       data_service_grpc_listen_address: 0.0.0.0:50052
+  data_service_grpc_tls_config:
+      data_service_grpc_listen_address: 0.0.0.0:50053
+      cert_path: /opt/aptos/certs/data-service-grpc-server.crt
+      key_path: /opt/aptos/certs/data-service-grpc-server.key
   whitelisted_auth_tokens: ["dummy_token"]
   file_store_config:
     file_store_type: LocalFileStore
