[VM][BlockSTM] Remove the dependency on StateView (#9990)
Added fine-grained views abstraction to be used on top
of `StateView` by BlockSTM. The new traits can be used
to resolve aggregators, resources and modules on separate
code paths.

Storage adapter has been adjusted to work with the new
traits, and to allow both owned and borrowed views.

--- a/aptos-move/block-executor/Cargo.toml
+++ b/aptos-move/block-executor/Cargo.toml
@@ -22,6 +22,7 @@ aptos-mvhashmap = { workspace = true }
 aptos-state-view = { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm-logging = { workspace = true }
+aptos-vm-types = { workspace = true }
 arc-swap = { workspace = true }
 bcs = { workspace = true }
 bytes = { workspace = true }
