--- a/Cargo.toml
+++ b/Cargo.toml
@@ -455,7 +455,7 @@ cfg-if = "1.0.0"
 claims = "0.7"
 clap = { version = "4.3.9", features = ["derive", "unstable-styles"] }
 clap_complete = "4.3.1"
-cloud-storage = { version = "0.11.1", features = ["global-client"] }
+cloud-storage = { version = "0.11.1", features = ["global-client", "rustls-tls"], default-features = false }
 codespan-reporting = "0.11.1"
 console-subscriber = "0.1.8"
 const_format = "0.2.26"
