--- a/aptos-move/framework/Cargo.toml
+++ b/aptos-move/framework/Cargo.toml
@@ -99,7 +99,7 @@ move-unit-test = { workspace = true }
 [features]
 default = []
 fuzzing = ["aptos-types/fuzzing", "proptest", "proptest-derive"]
-testing = ["aptos-move-stdlib/testing"]
+testing = ["aptos-move-stdlib/testing", "aptos-crypto/fuzzing"]
 
 [lib]
 doctest = false
